[package]
name = "axum-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.0", features = ["full"] }

# Serde / json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
